2002-01-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Replace Robin Socha testimonial with
	<deathsquad.87666dmzet.fsf@socha.net>.
	
	* faq.ht: New entries: 

	- "Is TMDA planning to support Microsoft Exchange Server?"
	- "Can't spammers just setup an auto-responder to defeat TMDA?"
	
	* inuse.ht (Links): Add Paradigm-Omega, from Robin Lynn Frank.
	
2002-01-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* TMDAGenerator.py (TMDAGenerator.__init__): Update copyright for
	2002.
	
2002-01-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add testimonial from Robin Lynn Frank.
	
	* requirements.ht (href): Clarify that while a LDA such as
	procmail is required for all non-qmail users, only Sendmail
	requires a .procmailrc to be maintained.

2002-01-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Add nmh configuration information.
	Programs should now add the `-n' option to prevent a newline
	from being added.

2001-12-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* bugs.ht: Add more detailed instructions on how to report bugs
	and make patch submissions.

2001-12-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: New entries: 
	- "Why don't my user+detail addresses work with Sendmail
	virtualdomains?"
	- Why don't my user+detail addresses work with Sendmail
	/etc/aliases?

2001-12-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Rename `tmda-make-address' to
	``tmda-address''.
	
	* download.ht (Links): Mention that the Debian and FreeBSD
	packages might be lagging behind the latest release.

2001-12-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Replace `tmda-dated-address' references with
	`tmda-make-address -d'.

2001-12-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* requirements.ht (Links): Recommend Python >= 2.2.
