@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Jan  8 13:57:41 2002 -->
+<!-- Tue Jan  8 14:11:36 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -169,8 +169,8 @@ To see what the confirmation process looks like,
 This methodology has the advantage of being very selective about what
 it allows in, while at the same time permitting legitimate, but
 previously unknown senders to reach you.  TMDA also has several
-techniques (See the Client Configuration section) that allow senders
-to circumvent the whitelist.  
+techniques (See the <a href="config-client.html">Client Configuration</a> section)
+that allow senders to circumvent the whitelist.  
 <br><br>
 </ul>
 
